// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`src/components/gallery/Gallery > return Gallery and click new 1`] = `
<div>
  <span
    class="mocked mocked"
  >
    <div
      class="Gallery"
    >
      <div
        class="GalleryCard selected MuiBox-root css-1ck4zfx"
        data-test="gallery-card-card1"
        draggable="true"
        style="opacity: 1;"
      >
        <div
          data-testid="page-actions-context-menu"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall icons css-16j9mlo-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeSmall css-dak9ua-MuiSvgIcon-root"
              data-testid="MoreHorizIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="GalleryCard MuiBox-root css-1ck4zfx"
        data-test="gallery-card-card2"
        draggable="true"
        style="opacity: 1;"
      >
        <div
          data-testid="page-actions-context-menu"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall icons css-16j9mlo-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeSmall css-dak9ua-MuiSvgIcon-root"
              data-testid="MoreHorizIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="octo-gallery-new"
      >
        + New
      </div>
    </div>
  </span>
</div>
`;

exports[`src/components/gallery/Gallery > return Gallery readonly 1`] = `
<div>
  <span
    class="mocked mocked"
  >
    <div
      class="Gallery"
    >
      <div
        class="GalleryCard selected MuiBox-root css-1ck4zfx"
        data-test="gallery-card-card1"
        draggable="true"
        style="opacity: 1;"
      />
      <div
        class="GalleryCard MuiBox-root css-1ck4zfx"
        data-test="gallery-card-card2"
        draggable="true"
        style="opacity: 1;"
      />
    </div>
  </span>
</div>
`;

exports[`src/components/gallery/Gallery > should match snapshot 1`] = `
<div>
  <span
    class="mocked mocked"
  >
    <div
      class="Gallery"
    >
      <div
        class="GalleryCard selected MuiBox-root css-1ck4zfx"
        data-test="gallery-card-card1"
        draggable="true"
        style="opacity: 1;"
      >
        <div
          data-testid="page-actions-context-menu"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall icons css-16j9mlo-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeSmall css-dak9ua-MuiSvgIcon-root"
              data-testid="MoreHorizIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="GalleryCard MuiBox-root css-1ck4zfx"
        data-test="gallery-card-card2"
        draggable="true"
        style="opacity: 1;"
      >
        <div
          data-testid="page-actions-context-menu"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall icons css-16j9mlo-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeSmall css-dak9ua-MuiSvgIcon-root"
              data-testid="MoreHorizIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="octo-gallery-new"
      >
        + New
      </div>
    </div>
  </span>
</div>
`;
